Categories and Workouts

--- a/RepReady/Views/Categories/Index.cshtml
+++ b/RepReady/Views/Categories/Index.cshtml
@@ -1,5 +1,27 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
+    ViewBag.Title = "Lista categorii";
 }
+<h2>@ViewBag.Title</h2>
+<br />  
+@if (TempData.ContainsKey("message"))
+{
+    <h1>@ViewBag.message</h1>
+}
+<br />
+
+@foreach (RepReady.Models.Category category in ViewBag.Categories)
+{
+    <div class="form-group">
+        <label asp-for="@category.Name" class="form-label">Denumire categorie</label>
+        <div><i class="bi bi-globe"></i> @category.Name</div>
+    </div>
+    <br />
+    <a class="btn alert-success" asp-controller="Categories" asp-action="Show" asp-route-id="@category.Id">Afisare categorie</a>
+    <a class="btn alert-success" asp-controller="Categories" asp-action="Edit" asp-route-id="@category.Id">Editare categorie</a>
+    <br />
+    <br />
+}
+<br />
+<a class="btn btn-success" asp-controller="Categories" asp-action="New">Adauga o noua categorie</a>
+<br />
+
