--- a/RepReady/Views/Workouts/Index.cshtml
+++ b/RepReady/Views/Workouts/Index.cshtml
@@ -1,5 +1,24 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿<br />
+<h2 class="text-center">Afisare antrenamente</h2>
+<br />
+@if(ViewBag.Message != null)
+{
+    <div class="alert-success p-3 rounded-3 text-center mb-5 @ViewBag.Alert">
+        @ViewBag.Message
+    </div>
 }
+<br />
+
+<a class="btn btn-success" asp-controller="Workouts" asp-action="New">Adauga antrenament</a>
+<br/>
+
+@foreach (var workout in ViewBag.Workouts)
+{
+    <div class="card">
+        <partial name="WorkoutInfo" model="workout"></partial>
+        <a class="btn btn-success" asp-controller="Workouts" asp-action="Show" asp-route-id="@workout.Id">Afisare antrenament</a>
+    </div>
+    <br />
+    <br />
+}
+
