--- a/RepReady/Views/Comments/Edit.cshtml
+++ b/RepReady/Views/Comments/Edit.cshtml
@@ -1,19 +1,20 @@
-﻿@{
-    ViewBag.Title = "Edit";
-}
+﻿@model RepReady.Models.Comment
 
 <h2>Editare comentariu</h2>
 <br />
 
-<form method="post" action="/Comments/Edit/@ViewBag.Comment.Id">
+<form asp-action="Edit" asp-controller="Comments" asp-route-id="@Model.Id" method="post">
 
-    <label>Continut comentariu</label>
-    <br />
+    <div class="form-group">
+        <label asp-for="Content" class="form-label">Conținut comentariu</label>
+        <br />
+        <textarea asp-for="Content" class="form-control"></textarea>
+        <span asp-validation-for="Content" class="text-danger"></span>
+    </div>
 
-    <textarea name="Content">@ViewBag.Comment.Content</textarea>
-    <br />
+    <br /><br />
 
-    <button class="btn  btn-primary" type="submit">Editeaza comentariul</button>
+    <button class="btn btn-primary" type="submit">Editează comentariul</button>
 
 </form>
 
