--- a/RepReady/Views/Exercises/Show.cshtml
+++ b/RepReady/Views/Exercises/Show.cshtml
@@ -21,13 +21,15 @@
             <span class="alert-success">Status: @(Model.Status == true ? "Activ" : "Inactiv")</span>
             <span class="alert-success">Start: @Model.Start.ToString("g")</span>
             <span class="alert-success">Finish: @Model.Finish.ToString("g")</span>
+
         </div>
     </div>
 
     <hr />
 
     <div class="d-flex flex-row justify-content-between">
-        <a class="btn btn-success" href="/Exercises/Edit/@Model.Id">Editeaza exercitiu</a>
+      <!--  <a class="btn btn-success" href="/Exercises/Edit/@Model.Id">Editeaza exercitiu</a> -->
+        <a class="btn btn-success asp-controller="Exercises" asp-action="Edit" asp-route-id="@Model.Id">Editează comentariul</a>
 
         <form method="post" asp-controller="Exercises" asp-action="Delete" asp-route-id="@Model.Id">
             <button class="btn btn-danger" type="submit">Sterge exercitiu</button>
@@ -49,6 +51,7 @@
                 <div>
                     <p>@comm.Content</p>
                     <small>@comm.Date</small>
+                    <strong><i class="bi bi-person"></i>@comm.User.UserName</strong>
                     @if(@comm.WasEdited == true)
                     {
                         <small>Edited</small>
@@ -57,21 +60,23 @@
                 </div>
                 <br>
 
-                <div class="d-flex">
-                    <div>
-                        <a class="btn btn-outline-primary" asp-controller="Comments" asp-action="Edit" asp-route-itemid="@comm.Id">
+                
+                    <div class="d-flex">
+                        <div>
+                        <a class="btn btn-outline-primary" asp-controller="Comments" asp-action="Edit" asp-route-id="@comm.Id">
                             <i class="bi bi-pencil-square"></i>Editeaza
                         </a>
-                    </div>
+                        </div>
 
-                    <div>
-                        <form method="post" asp-controller="Comments" asp-action="Delete" asp-route-id="@comm.Id">
-                            <button class="btn btn-outline-danger" type="submit">
-                                <i class="bi bi-trash"></i>Sterge
-                            </button>
-                        </form>
+                        <div>
+                            <form method="post" asp-controller="Comments" asp-action="Delete" asp-route-id="@comm.Id">
+                                <button class="btn btn-outline-danger" type="submit">
+                                    <i class="bi bi-trash"></i>Sterge
+                                </button>
+                            </form>
+                        </div>
                     </div>
-                </div>
+                
 
                 <br />
             </div>
