--- a/RepReady/Views/Shared/WorkoutInfo.cshtml
+++ b/RepReady/Views/Shared/WorkoutInfo.cshtml
@@ -5,7 +5,7 @@
     <div class="d-flex justify-content-between flex-row mt-5">
         <div><i class="bi bi-globe"></i> @Model.Category.Name</div>
         <div><i class="bi "></i> @Model.Duration</div>
-        @*<div><i class="bi bi-person"></i> ViewBag.Organizer</div>*@
+        <div><i class="bi bi-person"></i> @ViewBag.CreatorName</div>
         <span class="alert-success">@Model.Date</span>
     </div>
 </div>
