--- a/RepReady/Views/Workouts/Edit.cshtml
+++ b/RepReady/Views/Workouts/Edit.cshtml
@@ -6,7 +6,6 @@
     <div class="row">
         <div class="col-md-6 offset-3">
             <form method="post" asp-action="Edit" asp-controller="Workouts" asp-route-id="@Model.Id">
-                @*id?*@
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
                     <label asp-for="Name" class="form-label">Titlu Antrenament</label>
@@ -23,7 +22,7 @@
                     <br /><br />
                 </div>
                 <div class="form-group">
-                    <label asp-for="Duration" class="form-label">Titlu Antrenament</label>
+                    <label asp-for="Duration" class="form-label">Durată Antrenament</label>
                     <br />
                     <input asp-for="Duration" class="form-control" />
                     <span asp-validation-for="Duration" class="text-danger"></span>
