--- a/RepReady/Views/Workouts/Show.cshtml
+++ b/RepReady/Views/Workouts/Show.cshtml
@@ -10,7 +10,7 @@
 
 <div class="card">
     <partial name="WorkoutInfo" model="Model"></partial>
-    @if ((ViewBag.AfisareButoane == true && Model.OrganizerId == ViewBag.UserCurent) || ViewBag.EsteAdmin == true)
+    @if (ViewBag.EsteOrganizer == true || Model.CreatorId == ViewBag.UserCurent || ViewBag.EsteAdmin == true)
     {
         <div class="d-flex flex-row justify-content-between">
             <a class="btn btn-success" asp-controller="Workouts" asp-action="Edit" asp-route-id="@Model.Id">Editeaza antrenament</a>
@@ -18,6 +18,9 @@
                 <button class="btn btn-danger" type="submit">Sterge antrenament</button>
             </form>
         </div>
+        TempData["workoutId"] = @Model.Id;
+        <a class="btn btn-success" asp-controller="Exercises" asp-action="New">Adauga exercițiu</a>
+        
     }
 </div>
 <br />
@@ -54,4 +57,4 @@
     <br />
 }
 
-<a class="btn btn-success" href="/Exercises/New">Adauga exercițiu</a>
+
