--- a/RepReady/Views/Exercises/Edit.cshtml
+++ b/RepReady/Views/Exercises/Edit.cshtml
@@ -62,6 +62,25 @@
     </div>
     <br />
 
+    <!-- Edit users -->
+    <!-- Multiple choice users -->
+    <div class="form-group">
+        <label>Utilizatori</label><br />
+
+        @foreach (var user in ViewBag.Users)
+        {
+            bool isChecked = ViewBag.SelectedUsers.Contains(user.Id);
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" name="UsersIdList" value="@user.Id" id="user_@user.Id" @(isChecked ? "checked" : "")  />
+                <label class="form-check-label" for="user_@user.Id">
+                    @user.UserName
+                </label>
+            </div>
+        }
+
+        <!-- <span asp-validation-for="Users" class="text-danger"></span> -->
+    </div>
+
     <!-- Workout Selection -->
     <div class="form-group">
         <input type="hidden" name="WorkoutId" value="@ViewBag.WorkoutId" />
