--- a/RepReady/Views/Exercises/Show.cshtml
+++ b/RepReady/Views/Exercises/Show.cshtml
@@ -16,6 +16,24 @@
             <span class="alert-success">Finish: @Model.Finish.ToString("g")</span>
 
         </div>
+
+        <div>
+            @if (Model.Image != null)
+            {
+                @if (Model.Image.Contains(".mp4") || Model.Image.Contains(".mov"))
+                {
+                    <video width="550" height="300" controls>
+                        <source src="@Model.Image" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                }
+                else
+                {
+                    <img src="@Model.Image" alt="Article Image" style="width:100%; height: 450px; object-fit: cover" />
+                }
+            }
+        </div>
+
     </div>
 
     <hr />
@@ -23,7 +41,7 @@
     <div class="d-flex flex-row justify-content-between">
         <a class="btn btn-success" asp-controller="Exercises" asp-action="Edit" asp-route-id="@Model.Id">Editează exercițiul</a>
 
-        <form method="post" asp-controller="Exercises" asp-action="Complete" asp-route-id="@Model.Id">
+        <form method="post" asp-controller="Exercises" asp-action="ChangeStatus" asp-route-id="@Model.Id">
             @if (Model.Status == false)
             {
                 <button class="btn btn-success" type="submit">Am terminat</button>
