--- a/RepReady/Views/Exercises/Show.cshtml
+++ b/RepReady/Views/Exercises/Show.cshtml
@@ -7,11 +7,15 @@
         <h3 class="card-title alert-success py-3 px-3 rounded-2">@Model.Title</h3>
 
         <div class="card-text">@Model.Description</div>
+        <div>Creator: <i class="bi bi-person"></i> @ViewBag.CreatorName</div>
 
         <div class="d-flex justify-content-between flex-row mt-5">
             <span class="alert-success">Repetari: @Model.Reps</span>
             <span class="alert-success">Seturi: @Model.Sets</span>
-            <span class="alert-success">Status: @(Model.Status == true ? "Complete" : "Incomplet")</span>
+            @if(ViewBag.Status != null)
+            {
+                <span class="alert-success">Status: @(ViewBag.Status == true ? "Complete" : "Incomplet")</span>
+            }
             <span class="alert-success">Start: @Model.Start.ToString("g")</span>
             <span class="alert-success">Finish: @Model.Finish.ToString("g")</span>
 
@@ -41,14 +45,17 @@
     <div class="d-flex flex-row justify-content-between">
         <a class="btn btn-success" asp-controller="Exercises" asp-action="Edit" asp-route-id="@Model.Id">Editează exercițiul</a>
 
-        <form method="post" asp-controller="Exercises" asp-action="ChangeStatus" asp-route-id="@Model.Id">
-            @if (Model.Status == false)
+        <form method="post" asp-controller="Exercises" asp-action="ChangeStatus" asp-route-ExerciseId="@Model.Id" asp-route-UserId="@ViewBag.CurrentUser">
+           @if(ViewBag.Status != null)
             {
-                <button class="btn btn-success" type="submit">Am terminat</button>
-            }
-            else
-            {
-                <button class="btn btn-danger" type="submit">Again</button>
+                @if (ViewBag.Status == false)
+                {
+                    <button class="btn btn-success" type="submit">Am terminat</button>
+                }
+                else
+                {
+                    <button class="btn btn-danger" type="submit">Again</button>
+                }
             }
         </form>
 
