--- a/RepReady/Views/WorkoutInvitations/Index.cshtml
+++ b/RepReady/Views/WorkoutInvitations/Index.cshtml
@@ -20,6 +20,10 @@
             <form method="post" asp-action="Accept" asp-controller="WorkoutInvitations" asp-route-id="@invitation.Id">
                 <button type="submit" class="btn btn-success">Accept</button>
             </form>
+
+            <form method="post" asp-action="Reject" asp-controller="WorkoutInvitations" asp-route-id="@invitation.Id">
+                <button type="submit" class="btn btn-danger">Reject</button>
+            </form>
         </div>
     }
     
