--- a/RepReady/Views/Workouts/Show.cshtml
+++ b/RepReady/Views/Workouts/Show.cshtml
@@ -14,6 +14,14 @@
     {
         <div class="d-flex flex-row justify-content-between">
             <a class="btn btn-success" asp-controller="Workouts" asp-action="Edit" asp-route-id="@Model.Id">Editeaza antrenament</a>
+
+
+            @if (ViewBag.EsteAdmin == true)
+            {
+                <a class="btn btn-success" asp-controller="Workouts" asp-action="TakeOver" asp-route-id="@Model.Id">Preia antrenamentul</a>
+            }
+
+
             <form method="post" asp-controller="Workouts" asp-action="Delete" asp-route-id="@Model.Id">
                 <button class="btn btn-danger" type="submit">Sterge antrenament</button>
             </form>
@@ -56,7 +64,6 @@
                 <span class="alert-success px-1 align-content-center">@exercise.Description</span>
                 <span class="alert-success px-1 align-content-center">@exercise.Reps</span>
                 <span class="alert-success px-1 align-content-center">@exercise.Sets</span>
-                <span class="alert-success px-1 align-content-center">Status: @(@exercise.Status == true ? "Active" : "Inactive")</span>
                 <span class="alert-success px-1 align-content-center">Start: @exercise.Start.ToString("g")</span>
                 <span class="alert-success px-1 align-content-center">Finish: @exercise.Finish.ToString("g")</span>
                 <!-- Afisam numarul de utilizatori si un link catre un patial care contine lista de useri care participa la exercitiu -->
