--- a/RepReady/Views/Workouts/Index.cshtml
+++ b/RepReady/Views/Workouts/Index.cshtml
@@ -26,7 +26,7 @@
 <a class="btn btn-success" asp-controller="Workouts" asp-action="New">Adauga antrenament</a>
 <br/>
 
-@foreach (var workout in ViewBag.Workouts)
+ @foreach (var workout in ViewBag.Workouts)
 {
     <div class="card">
         <partial name="WorkoutInfo" model="workout"></partial>
@@ -34,5 +34,30 @@
     </div>
     <br />
     <br />
-}
+} 
 
+
+@* Afisarea paginata a articolelor *@
+
+<div>
+    <nav aria-label="Page navigation example">
+        <ul class="pagination">
+            <li class="page-item">
+                <a class="page-link" href="@ViewBag.PaginationBaseUrl=1" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                </a>
+            </li>
+
+            @for (int i = 1; i <= ViewBag.lastPage; i++)
+            {
+                <li class="page-item"> <a class="page-link" href="@ViewBag.PaginationBaseUrl=@i">@(i)</a> </li>
+            }
+
+            <li class="page-item">
+                <a class="page-link" href="@ViewBag.PaginationBaseUrl=@(ViewBag.lastPage)" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
+</div>
