--- a/RepReady/Views/Workouts/Show.cshtml
+++ b/RepReady/Views/Workouts/Show.cshtml
@@ -50,7 +50,7 @@
 
 
  @*Afisare exercitii impreuna cu butoanele de editare si stergere*@ 
-@foreach (var exercise in Model.Exercises)
+@foreach (var exercise in ViewBag.Exercises)
 {
     <div class="card">
 
@@ -81,3 +81,27 @@
 }
 
 
+@* Afisarea paginata a articolelor *@
+
+<div>
+    <nav aria-label="Page navigation example">
+        <ul class="pagination">
+            <li class="page-item">
+                <a class="page-link" href="@ViewBag.PaginationBaseUrl=1" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                </a>
+            </li>
+
+            @for (int i = 1; i <= ViewBag.lastPage; i++)
+            {
+                <li class="page-item"> <a class="page-link" href="@ViewBag.PaginationBaseUrl=@i">@(i)</a> </li>
+            }
+
+            <li class="page-item">
+                <a class="page-link" href="@ViewBag.PaginationBaseUrl=@(ViewBag.lastPage)" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
+</div>
